# AgenticKapruka

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  Dockerfile.cuda  Makefile  RALPH_PROMPT.md  README.md  docker-compose.yml  gunicorn.conf.py  prd.json  progress.txt  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml  main.yml
app/: config.py  dependencies.py  lifespan.py  main.py  templating.py
app/middleware/: __init__.py  errors.py
app/routes/: cart.py  chat.py  checkout.py  dev.py  health.py  partials.py  session.py
docs/: DEPLOY.md  README.md  chat-qa-report-20260627.md  chat-qa-report-20260628.md  chat-qa-report-20260629.md  chat-qa-report-20260630.md  explanation-architecture.md  explanation-product-overview.md  explanation-shopping-journey.md  howto-complete-checkout.md  howto-developer-setup.md  howto-find-and-order-gifts.md  howto-track-delivery.md  reference-customer-capabilities.md  reference-environment.md  reference-http-api.md  tutorial-first-conversation.md
evals/: __init__.py  golden_dataset.json  golden_dataset.py  intent_heuristics.py  llm_judge.py  multi_turn_dataset.json  multi_turn_dataset.py  ragas_ci_llm.py  ragas_eval.py
graphs/: __init__.py  checkout_constants.py  checkout_graph.py  checkout_state.py  model_router.py  shopping_graph.py  state.py
graphs/nodes/: __init__.py  agent_loop.py  analyze_intent.py  call_mcp_tools.py  checkout_steps.py  execute_cart_action.py  generate_response.py  load_zep_memory.py  master_flow.py  resolve_cart_product.py  resolve_delivery_context.py  retrieve_hybrid_context.py  run_checkout_graph.py  zep_memory_write.py
lib/analytics/: __init__.py  cugraph_optional.py  networkx_worker.py
lib/cart/: pricing.py
lib/chat/: __init__.py  address_resolution.py  city_resolution.py  delivery_dates.py  deps.py  intent_heuristics.py  intent_metadata.py  master_flow.py  model_router.py  off_topic.py  page_context.py  product_curation.py  product_detail.py  product_honesty.py  product_reference.py  query_preprocessor.py  request_specificity.py  routing.py  search_broadening.py  session.py  sse.py  status_copy.py  streaming.py  support_faq.py  system_prompts.py
lib/checkout/: __init__.py  chat_parser.py  delivery.py  order.py  payment.py  prefill.py  recipient.py  review.py  sender.py  tracking.py
lib/debug/: __init__.py  trace.py
lib/dev/: __init__.py  routing_simulator.py
lib/embeddings/: __init__.py  embedding_cache.py  reranker.py  vertex_embeddings.py
lib/genai/: __init__.py  client.py  errors.py  fallback.py
lib/health/: __init__.py  aggregator.py
lib/kapruka/: __init__.py  errors.py  mcp_client.py  product_id.py  service.py  tool_executor.py  types.py
lib/neo4j/: __init__.py  client.py  embed_ontology.py  hybrid_context.py  ingest_categories.py  ontology.py  traverse.py  vector_search.py
lib/redis/: __init__.py  cache.py  cart.py  checkout.py  checkpointer.py  client.py  order.py  rate_limit.py  session.py
lib/utils/: __init__.py  currency.py  text.py  timezone.py
lib/zep/: __init__.py  client.py  memory.py  preferences.py  session.py
scripts/: bootstrap_env.sh  bootstrap_neo4j.py  deploy_cloud_run.sh  dev.sh  embed_ontology.py  generate_lora_dataset.py  ingest_categories.py  install-tailwind.sh  migrate_ontology.py  ralph-common.sh  ralph-once.sh  ralph.sh  setup_github_cicd.sh  verify_chat_loop.py  verify_production_prerequisites.sh
static/css/: input.css
static/js/: cart-drawer.js  chat-helpers.js  chat-sse.js  lazy-image.js  payment-countdown.js  rate-limit-countdown.js
templates/: base.html
templates/chat/: empty_state.html  index.html  message_assistant.html  message_user.html
templates/checkout/: cart_partial.html  delivery_city.html  delivery_city_suggestions.html  delivery_date.html  delivery_date_error.html  delivery_date_status.html  delivery_field_error.html  delivery_form.html  payment_cta.html  recipient_field_error.html  recipient_form.html  review.html  sender_field_error.html  sender_form.html  tracking_status.html
templates/components/: cart_drawer.html  cart_drawer_panel.html  cart_drawer_trigger.html  category_chips.html  currency_selector.html  product_card.html  product_carousel.html  sidebar_nav.html  stock_badge.html
templates/dev/: routing_simulator.html  routing_simulator_results.html
templates/errors/: not_found.html
tests/: conftest.py
(+177 files in other folders)
