[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-kapruka"
version = "0.1.0"
description = "Agentic shopping assistant for Kapruka"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "gunicorn>=23,<24",
    "pydantic>=2.10,<3",
    "jinja2>=3.1,<4",
    "redis>=5.2,<6",
    "neo4j>=5.26,<6",
    "zep-python>=2.0,<3",
    "mcp>=1.6,<2",
    "langgraph>=0.3,<1",
    "google-genai>=1.0,<2",
    "google-cloud-aiplatform>=1.75,<2",
    "networkx>=3.4,<4",
    "ragas>=0.2,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.28,<1",
    "playwright>=1.49,<2",
    "pytest-playwright>=0.6,<1",
    "ruff>=0.8,<1",
    "mypy>=1.14,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "lib", "graphs"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "lib", "graphs", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "ASYNC",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app", "lib", "graphs"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
